<resources>
    <string name="app_name">Hello World Turbo</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>

    <string name="pref_user_login">pref_user_login</string>
    <string name="pref_user_password">pref_user_password</string>
    <string name="pref_user_cpf">pref_user_cpf</string>

    <string name="cpf">CPF</string>
    <string name="cpf_para_logar_no_provedor_de_vendas">
    CPF para logar no provedor de vendas</string>
        <string name="login">Login</string>
    <string name="login_do_provedor_de_vendas">
    Login do provedor de vendas</string>
        <string name="password">Password</string>
    <string name="password_para_logar_no_provedor_de_vendas">
    Password para logar no provedor de vendas</string>


    <string name="pref_ws_host">pref_ws_host</string>
    <string name="pref_ws_port">pref_ws_port</string>
    <string name="pref_ws_access_token">pref_ws_access_token</string>
    <string name="pref_ws_access_token_expiration">
    pref_ws_access_token_expiration</string>

    <string name="pref_ws_default_host">
    pcs-dm106-exemplo3b.azurewebsites.net</string>

    <string name="pref_ws_default_port">80</string>

    <string name="pref_ws_default_username">matilde@siecola.com</string>
    <string name="pref_ws_default_password">Matilde#7</string>
    <string name="pref_host_address">Address</string>
    <string name="pref_host_port">Port</string>


</resources>
